# cabal-gh5164

./: cabal.project
fails-with-new-build/: fails-with-new-build.cabal
fails-with-new-build/src/: FailsWithNewBuild.hs
setup-lib/: setup-lib.cabal
