name:                fails-with-new-build
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
category:            Testing
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base >= 4 && < 5, Cabal, setup-lib

library
  exposed-modules:    FailsWithNewBuild
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
