name:                setup-lib
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
data-files:          example.txt

library
  exposed-modules:     SetupLib
  other-modules:       Paths_setup_lib
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
